php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: musicart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: musicart-php:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: jwt-keys
          mountPath: /code/config/jwt
          readOnly: true
      volumes:
      - name: jwt-keys
        secret:
          secretName: jwt-secret
