nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
  namespace: musicart
spec:
  selector:
    app: nginx-backend
  ports:
  - port: 80
    targetPort: 80
