php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: musicart
spec:
  selector:
    app: php
  ports:
  - port: 9000
    targetPort: 9000
