ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicart
  namespace: musicart
spec:
  ingressClassName: nginx
  rules:
  - host: musicart.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nginx-backend
            port:
              number: 80
      - path: /authentication_token
        pathType: Prefix
        backend:
          service:
            name: nginx-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
